--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -30,6 +30,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 15px;
 }
 .logo_navbar > img {
   width: 62px;
