--- a/src/components/HomePage/Section1.module.css
+++ b/src/components/HomePage/Section1.module.css
@@ -44,6 +44,7 @@
 .secondDivImg {
   position: relative;
   z-index: -1;
+  padding-right: 15px;
 }
 .OnPicture {
   position: absolute;
@@ -62,6 +63,9 @@
   border-bottom: 1px solid rgb(117, 116, 116);
   padding-bottom: 2px;
 }
+.secondDivImg img {
+  width: 100%;
+}
 
 @media screen and (width<950px) {
   .Section1Container p {
@@ -69,6 +73,13 @@
   }
   .Section1Container > div > h2 {
     font-size: 1.8rem;
+  }
+
+  .OnPicture h1 {
+    font-size: 2.1rem;
+  }
+  .learnMore {
+    font-size: 1rem;
   }
 }
 
@@ -78,11 +89,43 @@
   }
   .Section1Container > div > h2 {
     padding-left: 20px;
+    font-size: 1.6rem;
   }
   .secondDivImg {
     padding: 20px;
   }
   .Section1CardSection {
     padding: 20px;
+  }
+  .Section1Container p {
+    font-size: 1rem;
+  }
+  .OnPicture {
+    top: 30px;
+    left: 30px;
+  }
+  .OnPicture h1 {
+    font-size: 1.7rem;
+  }
+  .learnMore {
+    font-size: 1rem;
+  }
+}
+@media screen and (width<500px) {
+  .Section1Container > div > h2 {
+    font-size: 1.4rem;
+  }
+  .Section1Container p {
+    font-size: 0.9rem;
+  }
+  .OnPicture {
+    top: 30px;
+    left: 30px;
+  }
+  .OnPicture h1 {
+    font-size: 1.6rem;
+  }
+  .learnMore {
+    font-size: 0.9rem;
   }
 }
