completed sigin and login functionality with google and localstorage

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -152,6 +152,7 @@
 .google-button:hover {
   background-color: #357ae8;
   /* Slightly darker blue */
+  cursor: pointer;
 }
 
 /* Style for the Facebook Login button */
