--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -68,7 +68,7 @@
   color: #7c7e7e;
 }
 
-.navbar_top div:last-child {
+.navbar_top > div:last-child {
   /* border: 1px solid red; */
   display: flex;
   justify-content: center;
@@ -111,58 +111,52 @@
   align-items: center;
   cursor: pointer;
 }
-.navbarDropdown {
-  position: fixed;
-  z-index: 10;
-  width: 100%;
-  top: 60px;
-}
-.navbarDropdown > div {
-  max-width: 1100px;
-  margin: auto;
-}
-
-.navbarDropdownLogin {
-  /* border: 1px solid green; */
+/* ------------------------ */
+.logindropdown {
+  position: absolute;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   display: flex;
   flex-direction: column;
   width: 12%;
-  margin-left: 88%;
   background-color: white;
   border-radius: 6px;
   padding: 10px;
   gap: 10px;
   text-align: center;
+  top: 62px;
 }
-.navbarDropdownLogin > div {
+.logindropdown > div {
   border-bottom: 1px solid rgb(226, 225, 225);
   padding-bottom: 5px;
   color: #8e8f8f;
 }
-.navbarDropdownLogin > div:hover {
+.logindropdown > div:hover {
   color: #1b1b1b;
   cursor: pointer;
 }
-.navbarDropdownSearch {
-  /* border: 1px solid green; */
+/* --------------------- */
+
+.searchDropdown {
+  position: absolute;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   display: flex;
   flex-direction: column;
-  width: 17.5%;
-  margin-left: 73.7%;
+  width: 194px;
   background-color: white;
   border-radius: 6px;
   padding: 10px 0;
   gap: 10px;
+  margin-left: -0.6%;
+  top: 62px;
 }
-.navbarDropdownSearch div {
+.searchDropdown > div {
   cursor: pointer;
   padding: 5px 10px;
 }
-.navbarDropdownSearch div:hover {
+.searchDropdown > div:hover {
   background-color: #e9e6e6;
 }
+
 /* ----- Navbar Top Ends Here ----- */
 
 /* ----- Navbar Bottom Starts Here ------ */
@@ -313,5 +307,11 @@
     position: absolute;
     content: "";
     height: 75px;
+  }
+  .logindropdown {
+    width: 20%;
+  }
+  .searchDropdown {
+    margin-left: -1.1%;
   }
 }
