--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   background-color: white;
+  z-index: 1000;
 }
 #navbar_container::before {
   position: absolute;
