--- a/src/components/HomePage/ContactUs.module.css
+++ b/src/components/HomePage/ContactUs.module.css
@@ -18,6 +18,9 @@
   padding-bottom: 10px;
   padding: 10px;
 }
+.contactUs button {
+  cursor: pointer;
+}
 .contactName {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
