--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -44,6 +44,7 @@
   padding-top: 10px;
   width: 85%;
 }
+
 /* ----- Navbar Top Starts Here ----- */
 .navbar_top {
   /* border: 1px solid red; */
@@ -113,6 +114,19 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+.countBigScreen {
+  position: absolute;
+  top: 0;
+  margin-left: 10px;
+  margin-top: 10px;
+  background-color: #fccd5c;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* ------------------------ */
 .logindropdown {
@@ -316,5 +330,9 @@
   }
   .searchDropdown {
     margin-left: -1.1%;
+  }
+  .countBigScreen {
+    margin-top: 17px;
+    margin-left: 8px;
   }
 }
