--- a/src/components/CartPage/Cart.css
+++ b/src/components/CartPage/Cart.css
@@ -1,9 +1,9 @@
 #cartContainer {
-  background-color: rgba(128, 128, 128, 0.236);
   display: flex;
-  /* height: 100vh; */
   padding-top: 140px;
   padding-bottom: 90px;
+  max-width: 1450px;
+  margin: auto;
 }
 
 #Container {
@@ -16,6 +16,7 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
+  background-color: #f8f8f8;
 }
 
 #address > h3 {
@@ -24,6 +25,8 @@
 #CardElement {
   margin-top: 12px;
   width: 100%;
+  height: 65vh;
+  overflow: auto;
 }
 
 #ProductDetail {
