--- a/src/components/CartPage/CartElement/CartElement.css
+++ b/src/components/CartPage/CartElement/CartElement.css
@@ -5,6 +5,9 @@
   gap: 25px;
   padding: 15px 15px 0 15px;
 }
+.mainCartElement {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
 
 #elementPrice {
   display: flex;
