--- a/src/components/CartPage/Cart.css
+++ b/src/components/CartPage/Cart.css
@@ -27,6 +27,29 @@
   width: 100%;
   height: 65vh;
   overflow: auto;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+
+.content-wrapper {
+  padding: 20px;
+}
+
+#CardElement::-webkit-scrollbar {
+  width: 12px;
+}
+
+#CardElement::-webkit-scrollbar-thumb {
+  background: #999999ca;
+  border-radius: 6px;
+}
+
+#CardElement::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+
+#CardElement::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
 #ProductDetail {
