--- a/src/components/CartPage/CartElement/CartElement.css
+++ b/src/components/CartPage/CartElement/CartElement.css
@@ -7,6 +7,8 @@
 }
 .mainCartElement {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: 10px;
+  border-radius: 10px;
 }
 
 #elementPrice {
