--- a/src/components/CartPage/PriceDetails/PriceDetail.css
+++ b/src/components/CartPage/PriceDetails/PriceDetail.css
@@ -50,12 +50,17 @@
 
 .checkOutBtn {
   padding: 15px 130px;
-  background-color: #fccd5c;
+  background-color: #f4b624;
+  /* fccd5c */
   color: white;
   font-weight: bold;
   font-size: 16px;
   border-style: none;
   cursor: pointer;
+}
+
+.checkOutBtn:hover {
+  background-color: #fccd5c;
 }
 
 .checkOutContainer {
