--- a/src/components/HomePage/BuyersChoice.module.css
+++ b/src/components/HomePage/BuyersChoice.module.css
@@ -80,10 +80,14 @@
 .cardWrapper > div > div > button:hover {
   background-color: #e4ac29;
 }
+.cardWrapper > div {
+  height: inherit;
+}
 
-.cardWrapper img {
+.cardWrapper > div > img {
   width: 100%;
-  height: 55%;
+  height: 70%;
+  /* height: 50px; */
 }
 
 @media screen and (width<1000px) {
