--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,17 +1,17 @@
-#navbar_container {
+.navbar_container {
   position: fixed;
   width: 100%;
   background-color: white;
   z-index: 1000;
 }
-/* #navbar_container::before {
+.navbar_container::before {
   position: absolute;
   content: "";
   height: 60px;
   width: 100%;
   background-color: #f8f8f8;
   z-index: -1;
-} */
+}
 
 /* ------------- Navbar for Big Screen Starts Here -------------- */
 .navbar_bigscreen {
@@ -22,7 +22,7 @@
   padding: 0px 15px;
   justify-content: space-between;
 }
-#navbar_container a {
+.navbar_container a {
   color: #1b1b1b;
 }
 .logo_navbar {
@@ -286,7 +286,7 @@
   .logo_navbar > img {
     width: 52px;
   }
-  #navbar_container::before {
+  .navbar_container::before {
     height: 60px;
   }
   .search_icon > img {
@@ -319,7 +319,7 @@
   .navbar_bigscreen {
     display: none;
   }
-  #navbar_container::before {
+  .navbar_container::before {
     position: absolute;
     content: "";
     height: 75px;
