--- a/src/components/CartPage/Cart.css
+++ b/src/components/CartPage/Cart.css
@@ -1,15 +1,21 @@
 #cartContainer {
   display: flex;
   padding-top: 140px;
-  padding-bottom: 90px;
-  max-width: 1450px;
-  margin: auto;
-}
-
-#Container {
+  padding-bottom: 80px;
   max-width: 1280px;
+  margin: auto;
+  /* border: 1px solid red; */
+  justify-content: space-between;
+}
+.emptyCardContainer {
+  max-width: 1280px;
+  margin: auto;
+  /* border: 1px solid red; */
+}
+#Container {
+  /* max-width: 1280px; */
   width: 70%;
-  margin-left: auto;
+  /* margin-left: auto; */
 }
 
 #address {
@@ -17,6 +23,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #f8f8f8;
+  border-radius: 10px;
 }
 
 #address > h3 {
@@ -24,11 +31,13 @@
 }
 #CardElement {
   margin-top: 12px;
-  width: 100%;
-  height: 65vh;
+  /* width: 100%; */
+  max-height: 65vh;
   overflow: auto;
   box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
     rgba(17, 17, 26, 0.1) 0px 0px 8px;
+  border-radius: 10px;
+  padding-bottom: 5px;
 }
 
 .content-wrapper {
@@ -36,7 +45,7 @@
 }
 
 #CardElement::-webkit-scrollbar {
-  width: 12px;
+  width: 7px;
 }
 
 #CardElement::-webkit-scrollbar-thumb {
