--- a/src/components/CartPage/CartElement/CartElement.css
+++ b/src/components/CartPage/CartElement/CartElement.css
@@ -9,13 +9,28 @@
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin: 10px;
   border-radius: 10px;
+  border: 1px solid rgb(221, 219, 219);
+  padding-bottom: 5px;
 }
 
 #elementPrice {
   display: flex;
   gap: 10px;
 }
-
+.quantity-control button:nth-child(1):hover {
+  /* color: red; */
+  background-color: rgb(248, 217, 217);
+}
+.quantity-control button:nth-child(3):hover {
+  /* color: red; */
+  background-color: rgb(207, 248, 207);
+}
+#removeBtn button:nth-child(1):hover {
+  color: green;
+}
+#removeBtn button:nth-child(2):hover {
+  color: red;
+}
 .beforePrice {
   text-decoration: line-through;
   font-size: 15px;
@@ -80,7 +95,7 @@
 
 #removeBtn > button {
   border: none;
-  font-size: 17px;
+  font-size: 1rem;
   background-color: white;
   cursor: pointer;
   font-weight: 500;
