--- a/src/components/CartPage/PriceDetails/PriceDetail.css
+++ b/src/components/CartPage/PriceDetails/PriceDetail.css
@@ -12,10 +12,13 @@
 #mainContainer {
   background-color: #ffffff;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  margin-bottom: 40px;
   padding: 20px 15px;
-  margin-left: 20px;
-  margin-right: 60px;
+  /* margin-left: 20px; */
+  /* margin-right: 60px; */
+  margin: 0 15px;
+  margin-bottom: 40px;
+  border-radius: 10px;
+  border: 1px solid rgb(235, 235, 235);
 }
 
 .priceTags {
@@ -52,15 +55,16 @@
   padding: 15px 130px;
   background-color: #f4b624;
   /* fccd5c */
-  color: white;
+  color: rgb(61, 60, 60);
   font-weight: bold;
   font-size: 16px;
   border-style: none;
   cursor: pointer;
   text-wrap: nowrap;
+  border-radius: 8px;
 }
 
-.checkOutBtn:hover{
+.checkOutBtn:hover {
   background-color: #fccd5c;
 }
 
