Complete Thankyou page

--- a/src/components/CartPage/Cart.css
+++ b/src/components/CartPage/Cart.css
@@ -94,5 +94,10 @@
   #cartContainer {
     display: flex;
     flex-direction: column;
+    gap: 20px;
+  }
+
+  #Container {
+    width: 100%;
   }
 }
