--- a/src/components/CartPage/PriceDetails/PriceDetail.css
+++ b/src/components/CartPage/PriceDetails/PriceDetail.css
@@ -76,3 +76,25 @@
   text-decoration: none;
   color: white;
 }
+
+@media screen and (min-width: 520px) and (max-width: 1100px) {
+  .checkOutContainer {
+    display: flex;
+    justify-content: end;
+  }
+
+  .checkOutBtn {
+    padding: 15px 100px;
+  }
+}
+
+@media screen and (min-width: 250px) and (max-width: 519px) {
+  .checkOutContainer {
+    display: flex;
+    justify-content: center;
+  }
+
+  .checkOutBtn {
+    padding: 15px 100px;
+  }
+}
